# jevil

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: basic.rs  bench.rs  cliff.rs
src/: alpha.rs  error.rs  field.rs  hash.rs  keygen.rs  lib.rs  lift.rs  merkle.rs  params.rs  positions.rs  sign.rs  transcript.rs  verify.rs
src/field/: ntt.rs
src/whir/: base_case.rs  code.rs  codeswitch.rs  commitment.rs  encoding.rs  evader.rs  linear_form.rs  mask_stack.rs  mod.rs  protocol.rs  simulator.rs  sumcheck.rs  transcript_io.rs  trivial.rs  vc.rs  zero_evader.rs
tests/: base_case_hvzk.rs  cliff.rs  codeswitch_hvzk.rs  determinism.rs  kat.rs  multi_opening.rs  multi_opening_hvzk.rs  ntt_sweep.rs  positions.rs  private_evader.rs  round_trip.rs  slow.rs  sumcheck_hvzk.rs  tampering.rs  zk_encoding.rs
tests/common/: mod.rs
